# hypolab

./: .gitignore  LICENSE  app.py  pyproject.toml  readme.md  requirements.txt  setup.py
hypolab/: config.py  hypothesis_agent.py  literature_search.py  pipeline.py  profiler.py  statistical_tester.py
tests/: test_ground_truth.py  test_hypothesis_agent.py  test_literature_search.py  test_pipeline.py  test_profiler.py  test_statistical_tester.py
