[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypolab"
version = "0.1.0"
description = "Agentic Data Pipeline for Automated Hypothesis Generation & Testing"
readme = {text = "HypoLab: Automated hypothesis generation, statistical validation, and literature search powered by LLMs.", content-type = "text/plain"}
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Gaurav Nepal"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.28.0"]
groq = ["groq>=0.4.0"]
local = ["transformers>=4.35.0", "torch>=2.0.0", "accelerate>=0.24.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/gauravnepal/hypolab"
Repository = "https://github.com/gauravnepal/hypolab"

[tool.setuptools.packages.find]
where = ["."]
include = ["hypolab*"]